--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -1,8 +1,20 @@
 @use './_typography.scss';
+@use '@/assets/styles/colors' as *;
+@use 'sass:map';
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: "Open Sans", sans-serif;
+}
+
+body {
+  overflow: hidden;
+  height: 100vh;
+  background-color: map-get($gray, '50');
+}
+
+.card {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.06);
 }
